js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-import-call-unknown.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
